# truck_cycle

./: README.md  truck_cycle_html_flow.html
tx-asset-cycle/: Dockerfile  README.md  buildspec.yml  docker-compose.yml  main.py  pyproject.toml  test.py  transition.py
tx-asset-cycle/config/: kcl-config-realtime.properties  kcl-config-reprocess.properties  logback.xml  postgresql_config.py  redis_config.py  static_config.py
tx-asset-cycle/models/dao/: README.md  base_pgsql_dao.py  base_redis_dao.py  pgsql_action_dao.py  redis_source_dao.py
tx-asset-cycle/models/dto/: README.md  asset_dto.py  method_dto.py  record_dto.py  region_polygon_dto.py
tx-asset-cycle/models/query/: custom_queries.py  target_columns.py
tx-asset-cycle/processing/: README.md  debug_transform_phase.py  extract_phase.py  load_phase.py  load_realtime_phase.py  preprocess.py  transform_phase.py  transform_realtime_phase.py
tx-asset-cycle/processing/cores/: README.md  all_asset_in_dump_handler.py  code_logic_flow.md  debug_dumping_area_handler.py  debug_loading_area_handler.py  debug_traveling_area_handler.py  dumping_area_handler.py  identifiers.py  loading_area_handler.py  segment_decision.py  traveling_area_handler.py
tx-asset-cycle/utils/: README.md  checkpoint.py  healthcheck.py  kclpy_helper.py  utilities.py
